added phone and changed message box information

--- a/index.html
+++ b/index.html
@@ -14,13 +14,21 @@
         <hr>
       </div>
       <input type="hidden" name="access_key" value="0db1739e-9a10-45a1-8242-09e4e7c8f836">
-      <input type = "text" name="name" placeholder="Your Name" class="contact-inputs" required>
-      <input type = "email" name="email" placeholder="Your Email" class="contact-inputs" required>
-      <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
+      <input type = "text" name="name" placeholder="Full Name" class="contact-inputs" required>
+      <input type = "text" name="phone" placeholder="Phone number" class="contact-inputs" required>
+      <input type = "email" name="email" placeholder="Email" class="contact-inputs" required>
+      <p For style="color: #276E36;">Please specify the service(s) you are interested in. <br>To expedite the quotation process, please provide your address.</p>
+      <textarea name="message" placeholder="Details Here" class="contact-inputs" required></textarea>
       <button type="submit">Submit <img src="arrow-icon.png" alt="Submit Arrow"></button>
     </form>
     <div class="contact-right">
       <img src="Grow-Greener_Final-Logo.jpg" alt="Grow Greener Logo">
+      <p style="color: #276E36;">Services we offer include:
+      <ul style="color: #276E36;">
+        <li></li>
+      </ul> 
+        
+      </p>
     </div>
   </div>
 </body>
