added list of services

--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
       <textarea name="message" placeholder="Details Here" class="contact-inputs" required></textarea>
       <button type="submit">Submit <img src="arrow-icon.png" alt="Submit Arrow"></button>
     </form>
-    <div class="contact-right">
+    <div style="color: #276E36;" class="contact-right">
       <img src="Grow-Greener_Final-Logo.jpg" alt="Grow Greener Logo">
-      <p style="color: #276E36;">Services we offer include:
-      <ul style="color: #276E36;">
-        <li></li>
+      <br>
+      <br>
+      <h2>Services offered:</h2>
+      <br>
+      <ul style="color: #276E36; font-size: 18px;">
+        <li>Lawn Fertilization</li>
+        <li>Weed Control</li>
+        <li>Grub Control</li>
+        <li>Mosquito Control</li>
+        <br>
+        <ui>And more! Our expert team offers a range of additional services to ensure your <br>lawn is the envy of the neighborhood</ui>
       </ul> 
-        
-      </p>
     </div>
   </div>
 </body>
